syntax = "proto3";
package p1on;

import "camera.proto";
import "meta.proto";

import "graph.proto";
import "path.proto";
import "colormap.proto";

import "line.proto";
import "sphere.proto";
import "tube.proto";
import "overlay.proto";

//Root container for all animation relevant data
message Project {
    //Meta information
    ProjectMeta meta = 1;

    //-----------------------Data--------------------------

    //list of graphs
    repeated Graph graphs = 2;
    //list of paths
    repeated Path paths = 3;
    //global color map
    ColorMap colormap = 5;

    //-----------------------Scene-------------------------
    
    //Overrides standard camera if provided
    Camera camera = 10;
    
    //---------------------Animation-----------------------

    //list of groups hidden by default
    repeated string hiddenGroups = 15;

    //list of animated spheres
    repeated Sphere spheres = 16;
    //list of animated lines
    repeated Line lines = 17;
    //list of animated tubes
    repeated Tube tubes = 18;
    //list of animated overlay text
    repeated Overlay overlays = 19;
}
